Change text bright/dark to primary/secondary to fit light theme better

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Accessories.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Accessories.cshtml
@@ -20,7 +20,7 @@
                     <tr>
                         @if (i == 0)
                         {
-                            <td rowspan=@accessory.Obtained.Count class="text-bright">@accessory.Name</td>
+                            <td rowspan=@accessory.Obtained.Count class="text-primary">@accessory.Name</td>
                             <td rowspan=@accessory.Obtained.Count>@(accessory.Effect == "" ? "-" : accessory.Effect)</td>
                         }
 
