--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Armor.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Armor.cshtml
@@ -31,7 +31,7 @@
                             <tr>
                                 @if (i == 0)
                                 {
-                                    <td rowspan=@armor.Obtained.Count class="text-bright">@armor.Name</td>
+                                    <td rowspan=@armor.Obtained.Count class="text-primary">@armor.Name</td>
                                     <td rowspan=@armor.Obtained.Count class="text-align-center">@armor.Defense</td>
                                     <td rowspan=@armor.Obtained.Count class="text-align-center">@armor.Evade</td>
                                     <td rowspan=@armor.Obtained.Count>@(armor.Effect == "" ? "-" : armor.Effect)</td>
