--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Lunches.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Lunches.cshtml
@@ -13,7 +13,7 @@
             @foreach (var lunch in Model.Lunches)
             {
                 <tr>
-                    <td class="text-bright text-align-center">@lunch.Name</td>
+                    <td class="text-primary text-align-center">@lunch.Name</td>
                     <td class="text-align-center">@lunch.Method</td>
                 </tr>
             }
