--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
@@ -20,7 +20,7 @@
             {
                 <tr>
                     <td class="text-align-center">@quest.Number</td>
-                    <td class="text-bright">@quest.Title</td>
+                    <td class="text-primary">@quest.Title</td>
                     <td class="text-align-center mobile-hidden">@quest.QuestGiver</td>
                     <td class="text-align-center mobile-hidden">@quest.Location</td>
                     <td class="text-align-center mobile-hidden">@quest.DateAvailable</td>
