--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
 
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
-    <link href="~/css/site-light.css" rel="stylesheet" />
-    @*<link href="~/css/site-dark.css" rel="stylesheet" />*@
+    @*<link href="~/css/site-light.css" rel="stylesheet" />*@
+    <link href="~/css/site-dark.css" rel="stylesheet" />
 </head>
 <body>
     <div id="page-header">
