--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
@@ -24,7 +24,7 @@
                     {
                         <tr>
                             <td class="text-align-center">@answer.DateAsked</td>
-                            <td class="text-bright white-space-pre-line">@answer.QuestionAsked</td>
+                            <td class="text-primary white-space-pre-line">@answer.QuestionAsked</td>
                             <td>@answer.QuestionAnswer</td>
                         </tr>
                     }
