--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                 <li><a asp-controller="App" asp-action="Armor">Armor</a></li>
                 <li><a asp-controller="App" asp-action="Accessories">Accessories</a></li>
                 <li><a asp-controller="App" asp-action="ExamAnswers">Exam Answers</a></li>
+                <li><a asp-controller="App" asp-action="Gardening">Gardening</a></li>
                 <li><a asp-controller="App" asp-action="Quests">Quests</a></li>
                 <li><a asp-controller="Shadow" asp-action="Index">Shadows</a></li>
                 <li><a asp-controller="App" asp-action="Lunches">Lunches</a></li>
@@ -58,7 +59,7 @@
     <script src="~/scipts/personaRecipesCalculator.js"></script>
 }
 
-@if (ViewBag.Title == "Shadows" || ViewBag.Title == "Accessories" || ViewBag.Title == "Armor" || ViewBag.Title == "Weapons")
+@if (ViewBag.Title == "Shadows" || ViewBag.Title == "Accessories" || ViewBag.Title == "Armor" || ViewBag.Title == "Weapons" || ViewBag.Title == "Gardening")
 {
     <script src="~/scipts/mergedRowHighlightFix.js"></script>
 }
