Add full documentation to project

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Index.cshtml
@@ -49,7 +49,7 @@
     <h3 class="no-results text-error text-align-center col-md-12 col-sm-12 col-xs-12" hidden>No results</h3>
 </div>
 
-@using static Persona4GoldenHelper.Data.Enums
+@using Persona4GoldenHelper.Data.Enums
 @functions {
     /// <summary>This will convert the element affinities ("None", "Weak", "Resistant" etc) into shorter versions ("", "wk", "rs" etc) for easy of reading and displaying.</summary>
     /// <param name="element">The element affinity to convert</param>
