--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Index.cshtml
@@ -63,7 +63,7 @@
     <h3 class="no-results text-error text-align-center col-md-12 col-sm-12 col-xs-12" hidden>No results</h3>
 </div>
 
-@using static Persona4GoldenHelper.Data.Enums
+@using Persona4GoldenHelper.Data.Enums
 @functions {
     /// <summary>Return a list with duplicated shadow names returned from Model.Shadows. (Used for seperating each shadow into a seperate tbody)</summary>
     /// <returns></returns>
