--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Shadow.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Shadow.cshtml
@@ -113,7 +113,7 @@
     </div>
 }
 
-@using static Persona4GoldenHelper.Data.Enums
+@using Persona4GoldenHelper.Data.Enums
 @functions {
     /// <summary>This will convert the element affinities ("None", "Weak", "Resistant" etc) into shorter versions ("", "wk", "rs" etc) for easy of reading and displaying.</summary>
     /// <param name="element">The element affinity to convert</param>
