--- a/Persona4GoldenHelper/Client/Pages/Index.razor
+++ b/Persona4GoldenHelper/Client/Pages/Index.razor
@@ -1,3 +1,93 @@
 ﻿@page "/"
 
-<h1>Index</h1>
+<div class="content">
+    <h1>About</h1>
+
+    <div>
+        <p class="text-align-centre">Persona 4 Golden Helper is a personal project to bring all the important info to one place.</p>
+        <p class="text-align-centre">The site is an ongoing open source project (link in the navbar), if you find any issues with the site please report them on the GitHub repo.</p>
+        <p class="text-align-centre">All the sources for the data collected on the site are linked below, with some areas I've obtained manually in-game.</p>
+    </div>
+
+    <table class="sources">
+        <thead>
+            <tr>
+                <th>Information</th>
+                <th>Link(s)</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>Personas</td>
+                <td>
+                    <a href="https://megamitensei.fandom.com/wiki/List_of_Persona_4_Personas">Megami Tensei Wiki</a>
+                    <a href="https://uk.ign.com/wikis/shin-megami-tensei-persona-4-golden/Personas">IGN Wiki</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Persona Recipe Calculator</td>
+                <td>
+                    <a href="https://github.com/arantius/persona-fusion-calculator">Persona 4 Fusion Calculator</a>
+                    <a href="http://persona4.wikidot.com/fusiontutor">Persona 4 Wiki - Fusion Theory</a>
+                    <a href="https://gamefaqs.gamespot.com/vita/641695-persona-4-golden/map/8037-fusion-chart">Game FAQs</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Skills</td>
+                <td>
+                    <a href="https://uk.ign.com/wikis/shin-megami-tensei-persona-4-golden/Skill_List">IGN Wiki</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Books</td>
+                <td>
+                    <a href="https://gamefaqs.gamespot.com/vita/641695-persona-4-golden/faqs/65714">Game FAQs</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Exam Answers</td>
+                <td>
+                    <a href="https://gamefaqs.gamespot.com/vita/641695-persona-4-golden/faqs/65427">Game FAQs</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Gardening</td>
+                <td>
+                    <a href="https://sites.google.com/site/persona4goldenguide/everything-else/gardening">Persona 4 Golden Guide</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Quests</td>
+                <td>
+                    <a href="https://gamefaqs.gamespot.com/vita/641695-persona-4-golden/faqs/68730">Game FAQs</a>
+                    <a href="https://uk.ign.com/wikis/shin-megami-tensei-persona-4-golden/Quests">IGN Wiki</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Shadows</td>
+                <td>
+                    <a href="https://megamitensei.fandom.com/wiki/Category:Persona_4_Golden_Shadows">Magami Tensei Wiki</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Lunches</td>
+                <td>
+                    <a href="https://uk.ign.com/wikis/shin-megami-tensei-persona-4-golden/Boxed_Lunches">IGN Wiki</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Skill Cards</td>
+                <td>
+                    <a href="https://docs.google.com/file/d/0BwDCz_Mqaf8RTmJac1hMS1dQOUU/edit?pli=1">Google Docs</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Armor, Accessories, and Weapons</td>
+                <td>
+                    <a href="https://megamitensei.fandom.com/wiki/List_of_Persona_4_Items">Magami Tensei Wiki</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
