--- a/Persona4GoldenHelper/Client/Pages/Personas.razor
+++ b/Persona4GoldenHelper/Client/Pages/Personas.razor
@@ -73,20 +73,17 @@
 
 
     /*********
-    ** Public Methods
+    ** Protected Methods
+    *********/
+    /// <inheritdoc/>
+    protected override async Task OnInitializedAsync() => AllPersonas = await Http.GetFromJsonAsync<List<Persona>>("api/GetAllPersonas");
+    
+
+    /*********
+    ** Private Methods
     *********/
     /// <summary>This will convert the element affinities into shorter versions (e.g. "", "wk", "rs") for easier reading and displaying.</summary>
     /// <param name="element">The element affinity to convert</param>
     /// <returns>The short hand version of the affinity</returns>
-    public static string ConvertElementAffinityToShortHand(ElementAffinity element) => AffinitityNameConversion[element.ToString()];
-
-
-    /*********
-    ** Protected Methods
-    *********/
-    /// <inheritdoc/>
-    protected override async Task OnInitializedAsync()
-    {
-        AllPersonas = await Http.GetFromJsonAsync<List<Persona>>("api/GetAllPersonas");
-    }
+    private static string ConvertElementAffinityToShortHand(ElementAffinity element) => AffinitityNameConversion[element.ToString()];
 }
