Slight cleanup in personas page

--- a/Persona4GoldenHelper/Client/Pages/Personas.razor
+++ b/Persona4GoldenHelper/Client/Pages/Personas.razor
@@ -54,7 +54,7 @@
     ** Fields
     *********/
     /// <summary>The short name for each element affinity.</summary>
-    private static Dictionary<string, string> AffinitityNameConversion = new()
+    private static readonly Dictionary<string, string> AffinitityNameConversion = new()
     {
         ["Weak"] = "wk",
         ["None"] = "-",
