Add missing '.' in weapons page documentation

--- a/Persona4GoldenHelper/Client/Pages/Weapons.razor
+++ b/Persona4GoldenHelper/Client/Pages/Weapons.razor
@@ -50,7 +50,7 @@
     /*********
     ** Fields
     *********/
-    /// <summary>The characters that can wield weapons</summary>
+    /// <summary>The characters that can wield weapons.</summary>
     private static readonly List<string> Characters = new() { "Protagonist", "Yosuke", "Chie", "Yukiko", "Kanji", "Teddie", "Naoto" };
 
     
