Remove unnecessary 'text-align-centre' usage in pages

--- a/Persona4GoldenHelper/Client/Pages/Accessories.razor
+++ b/Persona4GoldenHelper/Client/Pages/Accessories.razor
@@ -2,7 +2,7 @@
 @inject HttpClient Http;
 
 <div class="content">
-    <h1 class="text-align-centre">Accessories</h1>
+    <h1>Accessories</h1>
     <table>
         <thead>
             <tr>
