--- a/Persona4GoldenHelper/Client/Pages/Books.razor
+++ b/Persona4GoldenHelper/Client/Pages/Books.razor
@@ -3,7 +3,7 @@
 
 <div class="content">
     <div>
-        <h1 class="text-align-centre">Books</h1>
+        <h1>Books</h1>
         <table>
             <thead>
                 <tr>
@@ -29,7 +29,7 @@
     </div>
     
     <div>
-        <h1 class="text-align-centre">Book Order</h1>
+        <h1>Book Order</h1>
         <p class="text-align-centre">This is the order of the books in the inventory, to make it easier to see which books you're missing.</p>
         <table class="narrow-table">
             <tbody>
