--- a/Persona4GoldenHelper/Client/Pages/ExamAnswers.razor
+++ b/Persona4GoldenHelper/Client/Pages/ExamAnswers.razor
@@ -2,12 +2,12 @@
 @inject HttpClient Http;
 
 <div class="content">
-    <h1 class="text-align-centre">Exam Answers</h1>
+    <h1>Exam Answers</h1>
     @if (AllExamAnswers != null)
         foreach (var month in Months)
         {
             <div>
-                <h2 class="text-align-centre">@month</h2>
+                <h2>@month</h2>
                 <table>
                     <thead>
                         <tr>
