--- a/Persona4GoldenHelper/Client/Pages/Personas.razor
+++ b/Persona4GoldenHelper/Client/Pages/Personas.razor
@@ -2,7 +2,7 @@
 @inject HttpClient Http;
 
 <div class="content">
-    <h1 class="text-align-centre">Personas</h1>
+    <h1>Personas</h1>
     <table>
         <thead>
             <tr>
