--- a/Persona4GoldenHelper/Client/Pages/Skills.razor
+++ b/Persona4GoldenHelper/Client/Pages/Skills.razor
@@ -2,7 +2,7 @@
 @inject HttpClient Http;
 
 <div class="content">
-    <h1 class="text-align-centre">Skills</h1>
+    <h1>Skills</h1>
     <table>
         <thead>
             <tr>
