Add plants page

--- a/Persona4GoldenHelper/Client/Shared/Navbar.razor
+++ b/Persona4GoldenHelper/Client/Shared/Navbar.razor
@@ -11,7 +11,7 @@
             <li><a href="/armour">Armour</a></li>
             <li><a href="/accessories">Accessories</a></li>
             <li><a href="/examanswers">Exam Answers</a></li>
-            <li><a href="/gardening">Gardening</a></li>
+            <li><a href="/plants">Plants</a></li>
             <li><a href="/quests">Quests</a></li>
             <li><a href="/shadows">Shadows</a></li>
             <li><a href="/lunches">Lunches</a></li>
