Add quests page

--- a/Persona4GoldenHelper/Client/wwwroot/css/app.css
+++ b/Persona4GoldenHelper/Client/wwwroot/css/app.css
@@ -112,6 +112,11 @@ img {
 /*********
 ** General Styles
 *********/
+.wide-content {
+    width: 85%;
+    margin: 0 auto;
+}
+
 .content {
     width: 66%;
     margin: 0 auto;
