Add lunches page

--- a/Persona4GoldenHelper/Client/wwwroot/css/app.css
+++ b/Persona4GoldenHelper/Client/wwwroot/css/app.css
@@ -122,6 +122,11 @@ img {
     margin: 0 auto;
 }
 
+.narrow-content {
+    width: 33%;
+    margin: 0 auto;
+}
+
 .text-align-centre {
     text-align: center;
 }
